--- a/Labs_Projects/Lab_2.ipynb
+++ b/Labs_Projects/Lab_2.ipynb
@@ -54,15 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name='google/flan-t5-base'\n",
     "\n",
     "original_model = AutoModelForSeq2SeqLM.from_pretrained(model_name, torch_dtype=torch.bfloat16)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "\n"
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n"
    ]
   },
   {
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +97,189 @@
     "    return f\"trainable model parameters: {trainable_model_params}\\nall_model_params: {all_model_params}\\npercentage of trainable model parameters: {100 * trainable_model_params / all_model_params:.2f}% Model\"\n",
     "\n",
     "print(print_number_of_trainable_modelparameters(original_model))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------------------------------\n",
+      "INPUT PROMPT:\n",
+      "\n",
+      " Summarize the following conversation.\n",
+      " #Person1#: Have you considered upgrading your system?\n",
+      "#Person2#: Yes, but I'm not sure what exactly I would need.\n",
+      "#Person1#: You could consider adding a painting program to your software. It would allow you to make up your own flyers and banners for advertising.\n",
+      "#Person2#: That would be a definite bonus.\n",
+      "#Person1#: You might also want to upgrade your hardware because it is pretty outdated now.\n",
+      "#Person2#: How can we do that?\n",
+      "#Person1#: You'd probably need a faster processor, to begin with. And you also need a more powerful hard disc, more memory and a faster modem. Do you have a CD-ROM drive?\n",
+      "#Person2#: No.\n",
+      "#Person1#: Then you might want to add a CD-ROM drive too, because most new software programs are coming out on Cds.\n",
+      "#Person2#: That sounds great. Thanks.\n",
+      "\n",
+      "Summary:\n",
+      "\n",
+      "---------------------------------------------------------------------------------------------------\n",
+      "BASLINE HUMAN SUMMARY:\n",
+      "#Person1# teaches #Person2# how to upgrade software and hardware in #Person2#'s system.\n",
+      "\n",
+      "---------------------------------------------------------------------------------------------------\n",
+      "MODEL GENERATION - ZERO SHOT:\n",
+      "#Person1#: I'm thinking of upgrading my computer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "index =200\n",
+    "dialogue = dataset['test'][index]['dialogue']\n",
+    "summary = dataset['test'][index]['summary']\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    " Summarize the following conversation.\n",
+    " {dialogue}\n",
+    "\n",
+    "Summary:\n",
+    "\"\"\"\n",
+    "\n",
+    "inputs = tokenizer(prompt, return_tensors='pt')\n",
+    "output = tokenizer.decode(\n",
+    "    original_model.generate(\n",
+    "        inputs[\"input_ids\"],\n",
+    "        max_new_tokens=200,\n",
+    "    )[0],\n",
+    "    skip_special_tokens=True,\n",
+    ")\n",
+    "dash_line = '-'.join('' for x in range(100))\n",
+    "print(dash_line)\n",
+    "print(f'INPUT PROMPT:\\n{prompt}')\n",
+    "print(dash_line)\n",
+    "print(f'BASLINE HUMAN SUMMARY:\\n{summary}\\n')\n",
+    "print(dash_line)\n",
+    "print(f'MODEL GENERATION - ZERO SHOT:\\n{output}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6c480c0de63496da3fb9bad7a9691af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/12460 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4af8c592673e4fc3afe38e032c56c091",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/500 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4163f93cda03491db657dbdec63b7caf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1500 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def tokenize_function(example):\n",
+    "    start_prompt = 'Summarize the following conversation\\n\\n.'\n",
+    "    end_prompt = '\\n\\nSummary:'\n",
+    "    prompt = [start_prompt + dialogue + end_prompt for dialogue in example['dialogue']]\n",
+    "    example['inputs_ids'] = tokenizer(prompt, padding='max_length', truncation=True, return_tensors='pt').input_ids\n",
+    "    example['labels'] = tokenizer(example['summary'], padding='max_length', truncation=True, return_tensors='pt').input_ids\n",
+    "\n",
+    "    return example\n",
+    "\n",
+    "## The dataset actually contains 3 diff splits: trains, validation and test.\n",
+    "## The tokenize_function code is handling all data across all splits in batches.\n",
+    "\n",
+    "tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
+    "tokenized_datasets = tokenized_datasets.remove_columns(['id','topic', 'dialogue', 'summary',])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3027988ba4914c4ea3b6b7459e60275b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/12460 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "342ee2cbedf34e8584707dbebf83f382",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/500 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97c2d3dc12234dcb936d27fac4ca5d90",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/1500 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tokenized_datasets = tokenized_datasets.filter(lambda example, index: index % 100==0, with_indices=True)"
    ]
   },
   {
