--- a/Labs_Projects/Lab_2.ipynb
+++ b/Labs_Projects/Lab_2.ipynb
@@ -283,9 +283,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapes of the datasets:\n",
+      "Training: (125, 2)\n",
+      "Validation: (5, 2)\n",
+      "Test; (15, 2)\n",
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['inputs_ids', 'labels'],\n",
+      "        num_rows: 125\n",
+      "    })\n",
+      "    validation: Dataset({\n",
+      "        features: ['inputs_ids', 'labels'],\n",
+      "        num_rows: 5\n",
+      "    })\n",
+      "    test: Dataset({\n",
+      "        features: ['inputs_ids', 'labels'],\n",
+      "        num_rows: 15\n",
+      "    })\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Shapes of the datasets:\")\n",
+    "print(f\"Training: {tokenized_datasets['train'].shape}\")\n",
+    "print(f\"Validation: {tokenized_datasets['validation'].shape}\")\n",
+    "print(f\"Test; {tokenized_datasets['test'].shape}\")\n",
+    "\n",
+    "print(tokenized_datasets)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dir = f'./dialogue-summary-training-{str(int(time.time()))}'\n",
+    "\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=output_dir,\n",
+    "    learning_rate=1e-5,\n",
+    "    num_train_epochs=1,\n",
+    "    weight_decay=0.01,\n",
+    "    logging_steps=1,\n",
+    "    max_steps=1\n",
+    "\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=original_model,\n",
+    "    args=training_args,\n",
+    "    train_dataset = tokenized_datasets['train'],\n",
+    "    eval_dataset = tokenized_datasets['validation']\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.train()"
+   ]
   }
  ],
  "metadata": {
